wgcna projection - tme

--- a/analysis/04_05_WGCNA_projection.ipynb
+++ b/analysis/04_05_WGCNA_projection.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## projection of WGCNA\n",
+    "\n",
+    "some part of this script needs scRNA-seq object of each dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -10,17 +19,13 @@
    },
    "outputs": [],
    "source": [
-    "vlib = c(\"tidyverse\", \"ggpubr\", \"patchwork\",\"tidyseurat\",\"ggrastr\", \"ggsci\")\n",
+    "vlib = c(\"tidyverse\", \"ggpubr\", \"patchwork\",\"tidyseurat\", \"ggrastr\", \"ggsci\",\n",
+    "  \"future.apply\", \"arrow\", \"pheatmap\", \"ggrastr\",  \"Seurat\", \"hdWGCNA\")\n",
     "lapply(vlib, require, character.only = TRUE, quietly = TRUE) |> suppressMessages()\n",
     "\n",
-    "if (length(list.files(\"/data/podo\")) == 0) {\n",
-    "  base_dir = \"/data/nfs_dell/project_HS/\"\n",
-    "} else {\n",
-    "  base_dir = \"/data/podo/Projects/project_HS/\"\n",
-    "}\n",
+    "base_dir = \".\"\n",
     "\n",
-    "chr_wd = paste0(base_dir, \"202310-sceqtl_v6/\")\n",
-    "setwd(chr_wd)\n",
+    "setwd(base_dir)\n",
     "\n",
     "saveRDS.gz <- function(object, file, threads=4) {\n",
     "  con <- pipe(paste0(\"pigz -p\", threads, \" > \", file), \"wb\")\n",
@@ -32,18 +37,7 @@
     "  object <- readRDS(file = con)\n",
     "  close(con)\n",
     "  return(object)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "source": [
-    "## SF6C"
+    "}\n"
    ]
   },
   {
@@ -56,6 +50,63 @@
    },
    "outputs": [],
    "source": [
+    "## shared object\n",
+    "\n",
+    "seurat_obj.ref = readRDS.gz(\"seurat_obj/seurat_obj_wgcna_CD8.RNA.RDS\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## preprocessing each dataset (needs seurat object)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. aida\n",
+    "\n",
+    "for replication, please see 04_04_WGCNA_replication.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "seurat_obj.aida = readRDS.gz(\"seurat_obj/seurat_obj.aida.v5.RDS\") \n",
+    "seurat_obj.aida <- RunAzimuth(seurat_obj.aida, reference = \"pbmcref\")\n",
+    "\n",
+    "DefaultAssay(seurat_obj.aida) = \"RNA\"\n",
+    "seurat_obj.aida <- ProjectModules(\n",
+    "  seurat_obj = seurat_obj.aida,\n",
+    "  seurat_ref = seurat_obj.ref,\n",
+    "  # vars.to.regress = c(), # optionally regress covariates when running ScaleData\n",
+    "  group.by.vars = \"orig.ident\", # column in seurat_query to run harmony on\n",
+    "  wgcna_name_proj=\"projection\", # name of the new hdWGCNA experiment in the query dataset\n",
+    "  wgcna_name = \"wgcna\" # name of the hdWGCNA experiment in the ref dataset\n",
+    ")\n",
+    "\n",
+    "seurat_obj.aida <- ModuleConnectivity(\n",
+    "  seurat_obj.aida,\n",
+    "  group.by = 'predicted.celltype.l1', group_name = 'CD8 T'\n",
+    ")\n",
+    "\n",
+    "seurat_obj.aida <- ModuleExprScore(\n",
+    "  seurat_obj.aida,\n",
+    "  method='UCell'\n",
+    ")\n",
+    "projected_hMEs <- GetModules(seurat_obj.aida)\n",
+    "projected_hMEs %>% write_delim(\"assets/projected_aida.module_kME.txt.gz\")\n",
+    "seurat_obj.aida %>% saveRDS.gz(\"seurat_obj/seurat_obj.aida.v5.azimuth.wgcna.RDS\")\n",
+    "\n",
     "df_ME.aida = read_delim(\"scRNAseq_downstream_scenic/projected_aida.module_kME.txt.gz\", delim = \"\\t\") %>%\n",
     "  filter(cellID %in% df_meta_cd8_aida$cellID) %>%\n",
     "  mutate(data = \"AIDA_CTRL\")\n",
@@ -67,6 +118,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. TNBC dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -76,6 +134,67 @@
    },
    "outputs": [],
    "source": [
+    "expression_matrix = Read10X(data.dir=\"GSE169246_TNBC\",  gene.column=1)\n",
+    "\n",
+    "seurat_obj = CreateSeuratObject(counts = expression_matrix)\n",
+    "\n",
+    "df_md_original = seurat_obj@meta.data %>%\n",
+    "  as.data.frame() %>%\n",
+    "  rownames_to_column(\"cellID\")\n",
+    "\n",
+    "df_md = read_delim(\"GSE169246_TNBC/GSE169246_meta.txt.gz\", delim = \"\\t\") %>%\n",
+    "  select(-nCount_RNA, -nFeature_RNA) %>%\n",
+    "  as.data.frame()\n",
+    "\n",
+    "df_md = inner_join(df_md_original, df_md, by = c(\"cellID\"))\n",
+    "seurat_obj = subset(seurat_obj, cells = df_md$cellID)\n",
+    "seurat_obj@meta.data = df_md %>% as.data.frame() %>% column_to_rownames(\"cellID\")\n",
+    "\n",
+    "df_md %>% filter(grepl(\"CD8\", celltype_l2)) %>% distinct(celltype_l2) # CD8 T cell types.\n",
+    "\n",
+    "DefaultAssay(seurat_obj) = \"RNA\"\n",
+    "seurat_obj = seurat_obj %>% \n",
+    "    NormalizeData() %>%\n",
+    "    FindVariableFeatures() %>%\n",
+    "    ScaleData()\n",
+    "\n",
+    "seurat_obj <- RunPCA(seurat_obj)\n",
+    "seurat_obj <- FindNeighbors(seurat_obj, dims = 1:30, reduction = \"pca\")\n",
+    "seurat_obj <- FindClusters(seurat_obj, resolution = 0.4, cluster.name = \"unintegrated_clusters\")\n",
+    "seurat_obj <- RunAzimuth(seurat_obj, reference = \"pbmcref\")\n",
+    "\n",
+    "seurat_obj[[\"RNA\"]] <- split(seurat_obj[[\"RNA\"]], f = seurat_obj$sample)\n",
+    "\n",
+    "seurat_obj <- IntegrateLayers(\n",
+    "  object = seurat_obj, method = HarmonyIntegration,\n",
+    "  orig.reduction = \"pca\", new.reduction = \"harmony\",\n",
+    "  verbose = FALSE\n",
+    ")\n",
+    "\n",
+    "seurat_obj <- ProjectModules(\n",
+    "  seurat_obj = seurat_obj,\n",
+    "  seurat_ref = seurat_obj.ref,\n",
+    "  # vars.to.regress = c(), # optionally regress covariates when running ScaleData\n",
+    "  group.by.vars = \"sample\", # column in seurat_query to run harmony on\n",
+    "  wgcna_name_proj=\"projected\", # name of the new hdWGCNA experiment in the query dataset\n",
+    "  wgcna_name = \"wgcna\" # name of the hdWGCNA experiment in the ref dataset\n",
+    ")\n",
+    "\n",
+    "seurat_obj <- ModuleConnectivity(\n",
+    "  seurat_obj,\n",
+    "  group.by = 'predicted.celltype.l1', group_name = 'CD8 T'\n",
+    ")\n",
+    "\n",
+    "seurat_obj <- ModuleExprScore(\n",
+    "  seurat_obj,\n",
+    "  method='UCell'\n",
+    ")\n",
+    "\n",
+    "projected_hMEs <- GetModules(seurat_obj)\n",
+    "\n",
+    "projected_hMEs %>% write_delim(\"seurat_obj/GSE169246_TNBC/projected_hMEs.txt.gz\", delim = \"\\t\")\n",
+    "seurat_obj %>% saveRDS.gz(\"seurat_obj/GSE169246_TNBC/seurat_obj_raw_azimuth_GSE169246.RDS\")\n",
+    "\n",
     "seurat_obj_GSE169246@meta.data %>% distinct(tissue, response, time, regimen)\n",
     "df_meta_cd8_GSE169246  = seurat_obj_GSE169246@meta.data %>%\n",
     "  rownames_to_column(\"cellID\") %>%\n",
@@ -89,17 +208,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "seurat_obj_GSE200996 = readRDS.gz(\"scRNA_wgcna_replication/GSE200996/seurat_obj.merged.RDS\")\n",
-    "df_meta_add.GSE200996 = read_delim(\"scRNA_wgcna_replication/GSE200996/supplementary_metadata.txt\")"
+    "### 3. HNSCC dataset"
    ]
   },
   {
@@ -112,16 +224,120 @@
    },
    "outputs": [],
    "source": [
-    "df_meta_cd8_GSE200996  = seurat_obj_GSE200996@meta.data %>%\n",
+    "seurat_obj = readRDS.gz(\"GSE200996/seurat_obj.merged.RDS\")\n",
+    "seurat_obj = seurat_obj %>%\n",
+    "  NormalizeData() %>%\n",
+    "  FindVariableFeatures() %>%\n",
+    "  ScaleData() %>%\n",
+    "  RunPCA()\n",
+    "\n",
+    "seurat_obj = IntegrateLayers(\n",
+    "  object = seurat_obj, method = HarmonyIntegration,\n",
+    "  orig.reduction = \"pca\", new.reduction = \"harmony\",\n",
+    "  verbose = FALSE\n",
+    ")\n",
+    "\n",
+    "seurat_obj = FindNeighbors(seurat_obj, dims = 1:30, reduction = \"pca\")\n",
+    "seurat_obj = FindClusters(seurat_obj, resolution = 0.4, cluster.name = \"harmony_integrated\")\n",
+    "seurat_obj = RunUMAP(seurat_obj, reduction = \"harmony\", dims = 1:30, reduction.name = \"umap.harmony\")\n",
+    "seurat_obj = JoinLayers(seurat_obj)\n",
+    "seurat_obj = RunAzimuth(seurat_obj, reference = \"pbmcref\")\n",
+    "\n",
+    "seurat_obj <- ProjectModules(\n",
+    "  seurat_obj = seurat_obj,\n",
+    "  seurat_ref = seurat_obj.ref,\n",
+    "  # vars.to.regress = c(), # optionally regress covariates when running ScaleData\n",
+    "  group.by.vars = \"sample_id\", # column in seurat_query to run harmony on\n",
+    "  wgcna_name_proj=\"projected\", # name of the new hdWGCNA experiment in the query dataset\n",
+    "  wgcna_name = \"wgcna\" # name of the hdWGCNA experiment in the ref dataset\n",
+    ")\n",
+    "\n",
+    "seurat_obj <- ModuleConnectivity(\n",
+    "  seurat_obj,\n",
+    "  group.by = 'predicted.celltype.l1', group_name = 'CD8 T'\n",
+    ")\n",
+    "\n",
+    "seurat_obj <- ModuleExprScore(\n",
+    "  seurat_obj,\n",
+    "  method='UCell'\n",
+    ")\n",
+    "\n",
+    "projected_hMEs <- GetModules(seurat_obj)\n",
+    "\n",
+    "projected_hMEs %>% write_delim(\"seurat_obj/GSE200996/projected_hMEs.txt.gz\", delim = \"\\t\")\n",
+    "seurat_obj %>% saveRDS.gz(\"seurat_obj/GSE200996/seurat_obj.mergedRDS\")\n",
+    "\n",
+    "df_meta_add.GSE200996 = read_delim(\"scRNA_wgcna_replication/GSE200996/supplementary_metadata.txt\")\n",
+    "\n",
+    "df_meta_cd8_GSE200996  = seurat_obj@meta.data %>%\n",
     "  rownames_to_column(\"cellID\") %>%\n",
     "  left_join(., df_meta_add.GSE200996) %>%\n",
     "  filter(predicted.celltype.l1 == \"CD8 T\", time == \"baseline\")\n",
     "\n",
-    "df_ME.GSE200996 = GetMEs(seurat_obj_GSE200996) %>%\n",
+    "df_ME.GSE200996 = GetMEs(seurat_obj) %>%\n",
     "  as.data.frame() %>%\n",
     "  rownames_to_column(\"cellID\") %>%\n",
     "  filter(cellID %in% df_meta_cd8_GSE200996$cellID) %>%\n",
     "  mutate(data = \"HNSCC\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TME analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "seurat_obj.tme = readRDS.gz(\"tme_analysis/seurat_obj_sct_harmony_immuneOnly_anno_241028.RDS\")\n",
+    "DefaultAssay(seurat_obj.tme) = \"RNA\"\n",
+    "\n",
+    "seurat_obj.tme <- ProjectModules(\n",
+    "  seurat_obj = seurat_obj.tme,\n",
+    "  seurat_ref = seurat_obj.ref,\n",
+    "  # vars.to.regress = c(), # optionally regress covariates when running ScaleData\n",
+    "  group.by.vars = \"ID\", # column in seurat_query to run harmony on\n",
+    "  wgcna_name_proj=\"wgcna_projection\", # name of the new hdWGCNA experiment in the query dataset\n",
+    "  wgcna_name = \"wgcna\" # name of the hdWGCNA experiment in the ref dataset\n",
+    ")\n",
+    "seurat_obj.tme <- ModuleConnectivity(\n",
+    "  seurat_obj.tme,\n",
+    "  group.by = 'anno_l1', group_name = 'CD8_T'\n",
+    ")\n",
+    "\n",
+    "seurat_obj.tme <- ModuleExprScore(\n",
+    "  seurat_obj.tme,\n",
+    "  method='UCell'\n",
+    ")\n",
+    "\n",
+    "projected_hMEs <- GetModules(seurat_obj.tme)\n",
+    "df_anno = read_delim(\"tme_analysis/cluster_anno_harmony_clusters1_NKTonly.txt\")\n",
+    "new_md = seurat_obj.tme@meta.data %>%\n",
+    "  rownames_to_column(\"CellID\") %>%\n",
+    "  select(-anno_l1, -anno_l2) %>%\n",
+    "  mutate(harmony_clusters1 = as.numeric(as.character(harmony_clusters1))) %>%\n",
+    "  left_join(df_anno) %>%\n",
+    "  column_to_rownames(\"CellID\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "source": [
+    "## SF6C"
    ]
   },
   {
@@ -158,7 +374,8 @@
     "p1 %>% ggsave(\n",
     "  \"figure_prep/supplementary/sf6C_compareAIDA_CD8.pdf\",\n",
     "  ., height = 4, width = 5, dpi = 300\n",
-    ")"
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -211,6 +428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SF6D"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -235,6 +459,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### figure 6D"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -243,7 +474,60 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "options(repr.plot.width = 3, repr.plot.height = 4, repr.plot.res = 200)\n",
+    "left_join(df_ME, df_md) %>%\n",
+    "  filter(anno_l1 == \"CD8_T\") %>%\n",
+    "  mutate(Binary_response = factor(Binary_response, levels= c(\"Responder\", \"Non-responder\"))) %>%\n",
+    "  ggplot(aes(x = anno_l1, y = brown, color = Binary_response)) +\n",
+    "    geom_violin(width = 0.80, aes(fill = Binary_response), linewidth = 0) +\n",
+    "    geom_boxplot(\n",
+    "      width = 0.30, fill = \"white\",\n",
+    "      position = position_dodge(width = 0.80),\n",
+    "      outlier.shape = NA,\n",
+    "      alpha = 0.80\n",
+    "    ) +\n",
+    "    scale_fill_manual(values = c(\"#afafaf\", \"#a3260f\")) +\n",
+    "    scale_color_manual(values = c(\"grey30\", \"grey30\")) +\n",
+    "    stat_compare_means() +\n",
+    "    theme_pubr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### figure 6E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "p1 = left_join(df_ME, df_md) %>%\n",
+    "  filter(anno_l1 == \"CD8_T\") %>%\n",
+    "  mutate(Binary_response = factor(Binary_response, levels= c(\"Responder\", \"Non-responder\"))) %>%\n",
+    "  ggplot(aes(x = anno_l2, y = brown, color = Binary_response)) +\n",
+    "    geom_violin(width = 0.80, aes(fill = Binary_response), linewidth = 0) +\n",
+    "    geom_boxplot(\n",
+    "      width = 0.30, fill = \"white\",\n",
+    "      position = position_dodge(width = 0.80),\n",
+    "      outlier.shape = NA,\n",
+    "      alpha = 0.80\n",
+    "    ) +\n",
+    "    scale_fill_manual(values = c(\"#afafaf\", \"#a3260f\")) +\n",
+    "    scale_color_manual(values = c(\"grey30\", \"grey30\")) +\n",
+    "    stat_compare_means(aes(label = after_stat(p.signif))) +\n",
+    "    theme_pubr()"
+   ]
   }
  ],
  "metadata": {
