--- a/analysis/04_05_WGCNA_projection.ipynb
+++ b/analysis/04_05_WGCNA_projection.ipynb
@@ -11,13 +11,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate}\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\end{enumerate}\n"
+      ],
+      "text/markdown": [
+       "1. TRUE\n",
+       "2. TRUE\n",
+       "3. TRUE\n",
+       "4. FALSE\n",
+       "5. FALSE\n",
+       "6. TRUE\n",
+       "7. TRUE\n",
+       "8. TRUE\n",
+       "9. FALSE\n",
+       "10. FALSE\n",
+       "11. FALSE\n",
+       "12. FALSE\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[[1]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[2]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[3]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[4]]\n",
+       "[1] FALSE\n",
+       "\n",
+       "[[5]]\n",
+       "[1] FALSE\n",
+       "\n",
+       "[[6]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[7]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[8]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[9]]\n",
+       "[1] FALSE\n",
+       "\n",
+       "[[10]]\n",
+       "[1] FALSE\n",
+       "\n",
+       "[[11]]\n",
+       "[1] FALSE\n",
+       "\n",
+       "[[12]]\n",
+       "[1] FALSE\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vlib = c(\"tidyverse\", \"ggpubr\", \"patchwork\",\"tidyseurat\", \"ggrastr\", \"ggsci\",\n",
     "  \"future.apply\", \"arrow\", \"pheatmap\", \"ggrastr\",  \"Seurat\", \"hdWGCNA\")\n",
@@ -529,8 +621,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
